<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_to"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/email_recipient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_recipient"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/email_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_title"
        android:inputType="textCapSentences"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_message"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_message"
        android:inputType="textMultiLine"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/send_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/send_result"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</LinearLayout>