<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_numbers"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/input_first"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/unesite_djeljenika"
        android:inputType="number"/>

    <EditText
        android:id="@+id/input_second"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/unesite_djelitelja"
        android:inputType="number"/>

    <TextView
        android:id="@+id/input_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"/>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_calculate"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_calculate"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/btn_send"/>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/send_result"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/btn_compose"/>

        <Button
            android:id="@+id/btn_compose"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/compose_email"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>



</LinearLayout>